--- a/NewTrainingFramework/NewTrainingFramework.vcxproj.filters
+++ b/NewTrainingFramework/NewTrainingFramework.vcxproj.filters
@@ -200,10 +200,10 @@
     <None Include="..\Resources\Shaders\vertexShader.vs">
       <Filter>Resources\Shaders</Filter>
     </None>
-    <None Include="terrainVertexShader.vs">
+    <None Include="..\Resources\Shaders\terrainFragmentShader.fs">
       <Filter>Resources\Shaders</Filter>
     </None>
-    <None Include="terrainFragmentShader.fs">
+    <None Include="..\Resources\Shaders\terrainVertexShader.vs">
       <Filter>Resources\Shaders</Filter>
     </None>
   </ItemGroup>
