--- a/NewTrainingFramework/NewTrainingFramework.vcxproj
+++ b/NewTrainingFramework/NewTrainingFramework.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="SceneObject.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Shaders.cpp" />
+    <ClCompile Include="SkyboxObject.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug-ATI|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug-Nvidia|Win32'">Create</PrecompiledHeader>
@@ -196,6 +197,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderResource.h" />
     <ClInclude Include="Shaders.h" />
+    <ClInclude Include="SkyboxObject.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="SurfaceObject.h" />
     <ClInclude Include="targetver.h" />
